styles/globals.scss
/* ... */
.category-card {
  .tab {
    border: 0px;
  }
  input:checked {
    ~ .tab-content {
      border-top: 0px solid #ccd1e3;
      padding-top: 0px;
      padding-left: 1rem;
      padding-right: 1rem;
      padding-bottom: 0px;
      margin-bottom: 18px;
    }
    + .tab-label {
      &::after {
        position: absolute;
        right: 15px;
        top: 5px;
      }
    }
  }
  .tab-label {
    &:after {
      position: absolute;
      right: 15px;
      top: 7px;
    }
  }
  .tab-content {
    ul,
    ol {
      margin-left: 0px;
    }
  }
}

.pdp-details-heading {
  p {
    h1 {
      line-height: 61px;
      font-size: 54px;
      @media screen and (max-width: 1023px) {
        line-height: 36px;
        font-size: 32px;
      }
      span {
        line-height: 61px;
        font-size: 54px;
        @media screen and (max-width: 1023px) {
          line-height: 36px;
          font-size: 32px;
        }
      }
    }

    h2 {
      font-size: 36px;
      line-height: 41px;
      @media screen and (max-width: 1023px) {
        line-height: 22px;
        font-size: 20px;
      }
      span {
        font-size: 36px;
        font-size: 36px;
        @media screen and (max-width: 1023px) {
          line-height: 22px;
          font-size: 20px;
        }
      }
    }
  }

  .tab {
    input:checked {
      + .tab-label {
        &::after {
          content: "";
          background-image: url("../public/images/minus.svg");
        }
      }

      ~ .tab-content {
        max-height: 100vh;
        padding: 12px;
        border-top: 0.5px solid #ccd1e3;
      }
    }
    input {
      display: none;
    }
    .tab-content {
      padding: 0;
    }
  }
}
.product-detail-page {
  .tab {
    input:checked {
      + .tab-label {
        &::before {
          content: "";
          background-image: url("../public/images/minus.svg");
          position: absolute;
          right: 14px;
          width: 24px;
          height: 24px;
          text-align: center;
          transition: all 1s;
          color: #3a3e41;
          font-size: 30px;
          display: flex;
          align-items: flex-end;
          justify-content: flex-end;
          top: 10px;
        }
      }
      @media screen and (max-width: 1023px) {
        + .tab-label {
          &::before {
            content: none;
          }
        }
      }
    }
  }
}
.pdp-carousel {
  @media screen and (max-width: 1023px) {
    ul {
      li {
        margin-right: 12px;
        margin-top: 16px;
        &:last-child {
          margin-right: 0;
        }
      }
    }
  }
}

.pdp-detail-description {
  div {
    ul {
      list-style-type: disc;
    }
  }

  ul {
    list-style-type: disc;
  }
}
/*** why FT, Faq Mobile styles ***/
@media screen and (max-width: 1023px) {
  .four-oh-four {
    padding-left: 0px;
    padding-right: 0px;
  }
  .four-oh-four .heading {
    font-size: 27px;
    line-height: 30px;
  }
  .mb-76 {
    margin-bottom: 24px;
  }
  .bg-transparent-left {
    background-image: none;
  }
  .w-540 {
    width: 100%;
  }
  .bg-transparent-right {
    background-image: none;
  }
  footer {
    margin-top: 24px;
  }
  .tab input:checked ~ .tab-content {
    padding: 4px 4px 20px;
  }
  .tab {
    .tab-content ul,
    ol {
      margin-left: 0;
    }
    .tab-label {
      // position: relative;
      span {
        width: 95%;
      }
      // &::after{
      //   position: absolute;
      //   right: 15px;
      //   top: 15px;
      // }
    }
  }
  .text-54 {
    font-size: 32px;
    line-height: 36px;
  }
  .header {
    // background-color: #FFFAF6B2;
  }
  .where-to-buy {
    padding-left: 0 !important;
    padding-right: 0 !important;
  }
}

/*Header issue changes*/
@media (max-width: 768px) {
  .brand-logo {
    width: 183px;
  }
}
@media (min-width: 968px) {
  .header {
    // height: 178px;
    justify-content: inherit;
    padding: 0;
  }
  .header:hover,
  .header-sticky:hover,
  .brand-logo:hover + .header-sticky {
    background: #001a71 !important;
    color: #fff !important;
  }
  .header:hover .icon-arrow,
  .header-sticky:hover .icon-arrow,
  .brand-logo:hover + .header-sticky .icon-arrow {
    border-color: #fff;
  }
  .header:hover .group svg path {
    fill: #fff;
  }
  .search-icon path {
    fill: #001a71;
  }

  .header:hover .search-icon path {
    fill: #fff;
  }

  .input-search:focus + svg {
    fill: red;
  }

  .input-search:focus + .search-icon path {
    fill: #001a71 !important;
  }
  // .search-icon {
  //   position: absolute;
  //   bottom: 23px;
  //   right: 43px;
  // }
  .header:hover .search-icon path {
    fill: #fff;
  }
  .brand-logo {
    padding-left: 16px;
  }
  .signup-form {
    width: 27%;
  }
  .bg-gradient {
    background: linear-gradient(
      180deg,
      rgba(255, 255, 255, 0.8) 47.03%,
      rgba(255, 255, 255, 0) 100%
    );
    width: 100%;
    height: 363px;
    left: 0px;
    top: 0px;
    z-index: 8;
  }
  #nav-bar {
    a {
      text-decoration: none;
    }
  }
}
/*---------------------
	Nav Tabs - Health Page
	----------------------*/
.NavTabs_Contain {
  .tabs {
    display: flex;
    flex-wrap: wrap; // make sure it wraps
  }
  .tabs label {
    order: 1; // Put the labels first
    display: flex;
    justify-content: center;
    -webkit-box-flex: 3;
    -ms-flex-positive: 3;
    flex-grow: 3;
    transition: background ease 0.2s;
  }
  .tabs .tab {
    order: 99; // Put the tabs last
    flex-grow: 1;
    width: 100%;
    display: none;
    background: #fff;
  }
  .tabs input[type="radio"] {
    display: none;
  }

  .tabs input[type="radio"]:checked + label + .tab {
    display: block;
  }

  @media (max-width: 1023px) {
    .tabs .tab,
    .tabs label {
      order: initial;
    }
    .tabs label {
      display: flex;
      width: 100%;
      margin-right: 0;
      justify-content: flex-start;
    }
  }
}

.pb-10 {
  padding-bottom: 10px;
}
/* ... */

